--- a/001-roman-numerals-converter/template.yaml
+++ b/001-roman-numerals-converter/template.yaml
@@ -1,13 +1,15 @@
 AWSTemplateFormatVersion: 2010-09-09
+
 Description: |
-  Build Roman numeral application
+  Build Roman numerals application
+  
 Parameters:
-  Parameters:
+
   LatestAmiId:
     Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
     Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64
 
-   InstanceTypes:
+  InstanceTypes:
     Description: EC2 instance types
     Type: String
     AllowedValues:
@@ -17,14 +19,13 @@ Parameters:
          - t2.large
     Default: t2.micro
 
-
-
   Keypair:
     Description: Keypair for EC2 instance
     Type: AWS::EC2::KeyPair::KeyName
 
 Resources:
- WebServerSecurityGroup:
+
+  WebServerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Allow HTTP and SSH # Required
@@ -40,10 +41,6 @@ Resources:
           FromPort: 22
           ToPort: 22
           IpProtocol: tcp
-      Tags: 
-        - Key: "String" 
-          Value: "String"
-      VpcId: "String"
 
   WebServer:
     Type: AWS::EC2::Instance
@@ -53,11 +50,33 @@ Resources:
       KeyName: !Ref Keypair
       SecurityGroupIds: 
         - !GetAtt WebServerSecurityGroup.GroupId
-      UserData: "String"
+      UserData: !Base64 |
+        #!/bin/bash -x
+
+        yum update -y
+
+        yum install python3 -y
+        yum install pip -y
+        pip install flask
+
+        cd /home/ec2-user
+
+        FOLDER="https://raw.githubusercontent.com/altazbhanji/my-repository/main/001-roman-numerals-converter"
+        wget ${FOLDER}/app.py
+        mkdir templates
+        cd templates
+        wget ${FOLDER}/templates/index.html
+        wget ${FOLDER}/templates/result.html
+
+        cd ..
+        python3 app.py      
       Tags: 
         - Key: Name
-          Value: roman-numerals-webserver
+          Value: altaz-roman-numerals-webserver
 
 
   
-#Outputs:
+Outputs:
+  WebsiteURL:
+    Description: URL for website
+    Value: !Join ["", ["http://", !GetAtt WebServer.PublicDnsName]]
